# Data-scientist-assistant

./: README.md  logger.py  pyproject.toml  requirements.txt
Backend/: server.py
Frontend/: Home.py
Frontend/pages/: preprocessing_&_insights.py
model/: trained_model.pkl
preprocess_and_train/: grids.py  llm_service.py  models.py  preprocessing.py
