[project]
name = "data-scientist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "langchain-groq>=1.1.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "tavily>=1.1.0",
]
